[gd_scene load_steps=11 format=3 uid="uid://br68w7jw8wktu"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_yvwnh"]
[ext_resource type="Texture2D" uid="uid://df5kji681fup3" path="res://Sprites/Enemies/Enemy2.png" id="2_i0oou"]
[ext_resource type="AudioStream" uid="uid://dvc8kxwupr67n" path="res://Audio/poof.wav" id="3_fiego"]
[ext_resource type="AudioStream" uid="uid://bcuugtpug1l1i" path="res://Audio/bloboof.mp3" id="4_u3yl3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afhmf"]
size = Vector2(13, 7)

[sub_resource type="Animation" id="Animation_fmenn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 7)]
}

[sub_resource type="Animation" id="Animation_s0fd1"]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_2a33c"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13, 7), Vector2(13, 5), Vector2(13, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgrjg"]
_data = {
"RESET": SubResource("Animation_fmenn"),
"dead": SubResource("Animation_s0fd1"),
"idle": SubResource("Animation_2a33c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iacqh"]
size = Vector2(13, 7)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource("1_yvwnh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_afhmf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_i0oou")
hframes = 7
vframes = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lgrjg")
}

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2(8, 16)
target_position = Vector2(2.08165e-12, 11)

[node name="RayCastX" type="RayCast2D" parent="."]
position = Vector2(7, 13)
target_position = Vector2(15, 2.08165e-12)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_iacqh")
debug_color = Color(0.878905, 0.311694, 0.361783, 0.42)

[node name="Poof" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fiego")

[node name="Oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u3yl3")
volume_db = -10.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
